# pessimist

./: .vars.ini  CHANGELOG.md  MANIFEST.in  Makefile  README.md  requirements-dev.txt  setup.cfg
.github/workflows/: build.yml
pessimist/: __main__.py  cli.py  manager.py  util.py
pessimist/tests/: __init__.py  __main__.py  functional.py  manager.py
test_data/project1/: Makefile  requirements.txt  setup.py  test.py
